<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">StudentBudgetApplication</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_overview_fragment">OverviewFragment</string>
    <string name="title_activity_report_fragment">ReportFragment</string>
    <string name="title_activity_budgets_fragments">BudgetsFragments</string>
    <string name="title_activity_transactions_fragment">TransactionsFragment</string>
    <string name="title_activity_transaction">Transaction Details</string>
    <string name="title_activity_income">Incomes</string>
    <string name="title_activity_expense">Expenses</string>
    <string name="title_activity_term">Budget dates</string>
    <string name="title_activity_detail">StudentBudgetApplication</string>
    <string name="title_activity_income_fragment">IncomeFragment</string>
    <string name="title_activity_expense_fragment">ExpenseFragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>

    <string-array name="language_names">
        <item>English</item>
        <item>Cymraeg</item>
    </string-array>
    <string-array name="language_codes">
        <item>en</item>
        <item>cy</item>
    </string-array>
    <string-array name="currency">
        <item>£</item>
        <item>$</item>
        <item>€</item>
    </string-array>

    <!-- Translate from here down please! -->

    <string-array name="items">
        <item>Home</item>
        <item>New Transaction</item>
        <item>History</item>
        <item>Report</item>
        <item>New Budget</item>
        <item>Manage Incomes</item>
        <item>Manage Expenses</item>
    </string-array>
    <string-array name="weekly_monthly">
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="weekly_monthly_yearly">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="monthly_yearly">
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="please_select">Please select </string>
    <string name="please_enter">Please enter </string>
    <string name="msg_budget_end">budget start date</string>
    <string name="msg_budget_valid">valid budget dates</string>
    <string name="msg_income_balance">balance amount</string>
    <string name="msg_income_remaining_loans">remaining loans</string>
    <string name="msg_income_remaining_grants">remaining grants</string>
    <string name="msg_income_salary">salary amount</string>
    <string name="msg_income_other">amount for \'other\'</string>
    <string name="msg_expense_rent">rent amount</string>
    <string name="msg_expense_electricity">electricity amount</string>
    <string name="msg_expense_heating">heating amount</string>
    <string name="msg_expense_internet">internet amount</string>
    <string name="msg_expense_transport">transport amount</string>
    <string name="msg_expense_mobile">mobile amount</string>
    <string name="msg_expense_other">amount for \'other\'</string>
    <string name="enter_welcome">Welcome</string>
    <string name="enter_enterbutton">Enter</string>
    <string name="budgetperiod_start">Budget Start Date:</string>
    <string name="budgetperiod_end">Budget End Date:</string>
    <string name="budgetperiod_weeks">Weeks in budget period: </string>
    <string name="next_button">Next</string>
    <string name="income_balance">Balance:</string>
    <string name="income_remaining_loans">Remaining loans:</string>
    <string name="income_remaining_grants">Remaining grants:</string>
    <string name="income_salary">Salary:</string>
    <string name="income_other">Other:</string>
    <string name="income_weekly">Weekly Income:</string>
    <string name="expense_rent">Rent:</string>
    <string name="expense_electricity">Electricity:</string>
    <string name="expense_heating">Heating:</string>
    <string name="expense_internet">Internet:</string>
    <string name="expense_transport">Transport:</string>
    <string name="expense_mobile">Mobile:</string>
    <string name="expense_other">Other:</string>
    <string name="expense_weekly">Weekly Expense:</string>
    <string name="finish_button">Finish</string>
    <string name="overview_income">Weekly income:</string>
    <string name="overview_expense">Weekly expense:</string>
    <string name="overview_balance">Weekly balance:</string>
    <string name="budget_remove_msg">Budget will be permanently removed!</string>
    <string name="transaction_remove_msg">Transaction will be permanently removed!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="budget_array_text"> Budget: </string>
    <string name="transaction_added">Transaction added</string>
    <string name="no_desc">No Description</string>
    <string name="history_income">"Income"</string>
    <string name="history_income_lc">"income"</string>
    <string name="history_expenses">"Expenses"</string>
    <string name="transaction_expense">"Expense"</string>
    <string name="history_expenses_lc">"expenses"</string>
    <string name="new_transaction_amount">Amount:</string>
    <string name="new_transaction_desc">Short description:</string>
    <string name="new_transaction_type">Type:</string>
    <string name="new_transaction_category">Category:</string>
    <string name="new_transaction_date">Date:</string>
    <string name="clear_button">Clear</string>
    <string name="create_button">Create</string>
    <string name="budget_amount">Amount of weekly budget:</string>
    <string name="budget_remaining_weekly">Remaining weekly:</string>
    <string name="update_button">Update</string>
    <string name="preference_language_summary">Select a language</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_currency_summary">Select a currency</string>
    <string name="preference_currency_title">Currency</string>
    <string name="done_button">Done</string>
    <string name="transaction_removed">Remove </string>
    <string name="settings_title">Application</string>

    <string-array name="categories">
        <item>Food</item>
        <item>Supermarket</item>
        <item>Socialising</item>
        <item>Sport</item>
        <item>University</item>
        <item>Travel</item>
        <item>Clothing</item>
        <item>Other</item>
        <item>Micro Transaction</item>
    </string-array>

    <!-- new Strings below -->

    <string name="widget_text">Weekly Balance:</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_pin">PinActivity</string>
    <string name="report_no_data">No Data!</string>
    <string name="create_budget">Personal budget created!</string>
    <string name="hello_world">Hello world!</string>
    <string name="arrow_symbol"><![CDATA[-->]]></string>
    <string name="overviewMainBudget">Overall Budget progress:</string>
    <string name="budget_exists">"budget already exists!"</string>
    <string name="budget_must_be_more_than">Budget must be more than</string>
    <string name="pin_lock">Pin lock</string>
    <string name="toggle_pin_lock">Toggle pin lock</string>
    <string name="set_pin_number">Set pin number</string>
    <string name="pin_number">Pin number</string>
    <string name="enter_4_digit">Please enter 4-digit pin</string>
    <string name="reenter_4_digit">Please re-enter 4-digit pin</string>
    <string name="pin_set">Pin set!</string>
    <string name="pin_doesnt_match">Pin does not match</string>
    <string name="ok">OK</string>
    <string name="title_activity_license">LicenseActivity</string>
    <string name="licensetext">Licensing:\n\n
        Icons8\n
        The icons used on the transaction history are from Icons8 (See http://icons8.com/)\n\n
        AChartEngine\n
        For the creation of the chart the AChartEngine library was used. This library is under the Apache License 2.0 (See http://www.apache.org/licenses/LICENSE-2.0).\n\n
        Joda-Time\n
        The library Joda-Time was used for assistance with date/time calculations throughout the application. This library is under the Apache License 2.0 (See http://www.apache.org/licenses/LICENSE-2.0).
    </string>
</resources>
