<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TransactionActivity">


    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/tableLayout">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/new_transaction_amount"
                    android:id="@+id/amountText"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/amountValue"
                    android:layout_column="1"
                    android:layout_marginLeft="20dp"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/new_transaction_desc"
                    android:id="@+id/descText"
                    android:layout_column="0"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/descValue"
                    android:layout_marginLeft="20dp"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/new_transaction_type"
                    android:id="@+id/typeText"
                    android:layout_column="0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/typeValue"
                    android:layout_marginLeft="20dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/new_transaction_category"
                    android:id="@+id/categoryText"
                    android:layout_column="0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/categoryValue"
                    android:layout_marginLeft="20dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/new_transaction_date"
                    android:id="@+id/dateText"
                    android:layout_column="0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/dateValue"
                    android:layout_marginLeft="20dp"/>
        </TableRow>
    </TableLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button"
            android:id="@+id/doneButton"
            android:layout_below="@+id/tableLayout"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
