<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".ExpenseActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_marginBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/expense_rent"
                    android:id="@+id/textView"/>

            <Spinner
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/updateRentSpinner"
                    android:entries="@array/monthly_yearly"
                    android:layout_marginLeft="80dp"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/updateRentAmount"
                    android:layout_marginLeft="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:layout_marginBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/expense_electricity"
                    android:id="@+id/textView2"/>

            <Spinner
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/updateElectricitySpinner"
                    android:layout_marginLeft="26dp"
                    android:entries="@array/weekly_monthly"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/updateElectricityAmount"
                    android:layout_marginLeft="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout3"
                android:layout_marginBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/expense_heating"
                    android:id="@+id/textView3"/>

            <Spinner
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/updateHeatingSpinner"
                    android:layout_marginLeft="44dp"
                    android:entries="@array/weekly_monthly"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/updateHeatingAmount"
                    android:layout_marginLeft="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout4"
                android:layout_marginBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/expense_internet"
                    android:id="@+id/textView4"/>

            <Spinner
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/updateInternetSpinner"
                    android:layout_marginLeft="48dp"
                    android:entries="@array/monthly_yearly"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/updateInternetAmount"
                    android:layout_marginLeft="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout6"
                android:layout_marginBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/expense_transport"
                    android:id="@+id/textView6"/>

            <Spinner
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/updateTransportSpinner"
                    android:layout_marginLeft="27dp"
                    android:entries="@array/weekly_monthly_yearly"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/updateTransportAmount"
                    android:layout_marginLeft="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout7"
                android:layout_marginBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/expense_mobile"
                    android:id="@+id/textView7"/>

            <Spinner
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/updateMobileSpinner"
                    android:layout_marginLeft="58dp"
                    android:entries="@array/monthly_yearly"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/updateMobileAmount"
                    android:layout_marginLeft="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout8"
                android:layout_marginBottom="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/expense_other"
                    android:id="@+id/textView8"/>

            <Spinner
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/updateOtherSpinner"
                    android:layout_marginLeft="72dp"
                    android:entries="@array/weekly_monthly_yearly"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/updateOtherAmount"
                    android:layout_marginLeft="15dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/linearLayout9">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/expense_weekly"
                    android:id="@+id/textView9"
                    android:layout_gravity="center"
                    android:layout_marginLeft="66dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0"
                    android:id="@+id/updateWeeklyExp"
                    android:layout_gravity="center"/>
        </LinearLayout>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_button"
                android:id="@+id/updateExpenseButton"
                android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>
